--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "assisted_deployment_and_departure"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 authors = ["hvaren"]
 description = "An addon to launch programs when the game starts and kill processes when it closes."
@@ -9,9 +9,13 @@ description = "An addon to launch programs when the game starts and kill process
 crate-type = ["cdylib"]
 
 [dependencies]
-nexus = { git = "https://github.com/zerthox/nexus-rs" }
-lazy_static = "1.4"
-sysinfo = "0.29"
+log = "0.4.21"
+nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log", "log_filter"] }
+lazy_static = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.8"
-log = "0.4"
+sysinfo = "0.30"
+image = "0.25.1"
+windows-icons = "0.3.0"
+base64 = "0.22.1"
+rfd = "0.14.1"
