--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "assisted_deployment_and_departure"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 authors = ["hvaren"]
 description = "An addon to launch programs when the game starts and kill processes when it closes."
@@ -14,8 +14,9 @@ nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log", "log_f
 lazy_static = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.8"
-sysinfo = "0.30"
-image = "0.25.1"
+sysinfo = { version = "0.30", default-features = false }
+image = { version = "0.25.1", default-features = false, features = ["png"] }
 windows-icons = "0.3.0"
 base64 = "0.22.1"
 rfd = "0.14.1"
+shell-words = "1.1"
